org_moved_to_kermeta2_git/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/Constraint/ConstraintTest_003/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project ConstraintTest_003 {
	import "${project.baseUri}/003_ConstraintTest.kmt"
}
