org_moved_to_kermeta2_git/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/CallOperation/CallOperation_paramTypes_04/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project CallOperation_paramTypes_04 {
	import "${project.baseUri}/003_CallOperation_paramTypes_04.kmt"
}
